# Cafe_Robot

./: README.md
src/goat_examples/: package.xml
src/goat_msgs/: CMakeLists.txt  package.xml
src/goat_msgs/src/: trajectory_recorder.cpp
src/trajectory_logger/: package.xml
src/trajectory_logger/src/: trajectory_publisher.cpp
